<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageEncryptActivity"
    android:background="@drawable/back4">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="357dp"
        android:layout_height="360dp"
        android:layout_marginTop="110dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">


        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="7dp"
                app:counterEnabled="true"
                app:counterMaxLength="7"
                app:passwordToggleContentDescription="@string/enter_key"
                app:passwordToggleDrawable="@drawable/ic_eye"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_key"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="7dp"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:hint="@string/enter_message"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="169dp"
                android:layout_height="50dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="7dp"
                android:text="@string/two_way_encryption" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cipherLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="7dp"
                app:counterEnabled="true"
                app:counterMaxLength="7"
                app:errorEnabled="true"
                app:passwordToggleContentDescription="@string/cipher_key"
                app:passwordToggleDrawable="@drawable/ic_eye"
                app:passwordToggleEnabled="true">




                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cipherKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cipher_key"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.25">

        <Button
            android:id="@+id/hideButton"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/encode"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_lock2"
            android:typeface="serif"
            android:textSize="18sp"
            android:paddingLeft="20dip"
            android:drawableStart="@drawable/ic_lock2"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/buttonShareImage"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:text="@string/share_image"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_share"
            android:typeface="serif"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_share"
            android:paddingLeft="15dip"
            android:background="@drawable/custom_button"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="260dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03">

        <ImageView
            android:id="@+id/image"
            android:layout_width="164dp"
            android:layout_height="200dp"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:background="#ffffff"
            android:scaleType="fitCenter" />

        <Button
            android:id="@+id/btnTakePic"
            android:layout_width="180dp"
            android:background="@drawable/custom_button"
            android:layout_height="50dp"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="5dp"
            android:text="@string/choose_image"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_gallery"
            android:typeface="serif"
            android:textSize="18sp"
            android:paddingLeft="20dip"
            android:drawableStart="@drawable/ic_gallery"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>