<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageDecryptActivity"
    android:background="@drawable/back4"
    >

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="260dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03">

        <ImageView
            android:id="@+id/image"
            android:layout_width="164dp"
            android:layout_height="200dp"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:background="#ffffff"
            android:scaleType="fitCenter" />
        <Button
            android:id="@+id/btnTakePic"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="78dp"
            android:layout_marginLeft="78dp"
            android:layout_marginTop="10dp"
            android:text="@string/choose_image"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_gallery"
            android:typeface="serif"
            android:textSize="18sp"
            android:paddingLeft="20dip"
            android:background="@drawable/custom_button"
            android:drawableLeft="@drawable/ic_gallery" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="354dp"
        android:layout_height="250dp"
        android:layout_marginTop="75dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">


        <LinearLayout
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="7dp"
                app:counterEnabled="true"
                app:counterMaxLength="7"
                app:errorEnabled="true"
                app:passwordToggleContentDescription="@string/enter_key"
                app:passwordToggleDrawable="@drawable/ic_eye"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_key"
                    android:inputType="textPassword"
                    android:textColor="#000000">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="169dp"
                android:layout_height="50dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="7dp"
                android:text="@string/two_way_encryption" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cipherLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="7dp"
                app:counterEnabled="true"
                app:counterMaxLength="7"
                app:errorEnabled="true"
                app:passwordToggleContentDescription="@string/decipher_key"
                app:passwordToggleDrawable="@drawable/ic_eye"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deCipherKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/decipher_key"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnDecode"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/decode"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        app:layout_constraintVertical_bias="0.06999999"
        android:drawableLeft="@drawable/ic_k3"
        android:textSize="20sp"
        android:typeface="serif"
        android:drawableStart="@drawable/ic_k3"
        android:background="@drawable/custom_button"
        android:paddingLeft="20dip"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="354dp"
        android:layout_height="75dp"
        android:layout_marginTop="250dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_message"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif"


            />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>